spec/fixtures/source_graph_diagnostics/type_error/main.tn
require "./middle"

puts broken("value")
